--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1.3",
     "json-server": "0.17.0",
+    "npm-run-all": "4.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "2.0.1",
     "react-dom": "^18.2.0",
@@ -22,10 +23,12 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
- },
+  },
   "scripts": {
+    "start": "npm-run-all -p start:*",
+    "start:react": "react-scripts start",
+    "start:server": "json-server --port 3131 --no-cors --delay 250 --watch public/db/app.json --routes public/db/routes.json",
     "server": "json-server --port 3131 --no-cors --delay 250 --watch public/db/app.json --routes public/db/routes.json",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
