New components still no lists rendering at main page

--- a/public/db/app.json
+++ b/public/db/app.json
@@ -1,4 +1,9 @@
 {
+    "status" : [
+      "Busy",
+      "Cleaning",
+      "Free"
+    ],
     "tables": [
       { "id": "1",
         "peopleAmount": "1",
