Reducer action do not fire

--- a/public/db/app.json
+++ b/public/db/app.json
@@ -2,7 +2,8 @@
     "status" : [
       "Busy",
       "Cleaning",
-      "Free"
+      "Free",
+      "Reserved"
     ],
     "tables": [
       { "id": "1",
