Reloading and empty page error

--- a/public/db/app.json
+++ b/public/db/app.json
@@ -10,7 +10,7 @@
       "id": "1",
       "peopleAmount": "3",
       "maxPeople": "9",
-      "status": "Free",
+      "status": "Cleaning",
       "bill": "3"
     },
     {
